--- a/project-motion/index.css
+++ b/project-motion/index.css
@@ -73,6 +73,7 @@ body {
   height: calc(100% - 18%);
   background-color: rgba(128, 128, 128, 0.3);
   overflow-y: auto;
+  overflow-x: hidden;
 }
 .m-contents::-webkit-scrollbar {
   width: 10px;
@@ -132,8 +133,8 @@ body {
   max-width: 95%;
 }
 
-.m-note {
-}
+/* .m-note {
+} */
 
 .m-todo {
   padding: 16px;
@@ -216,7 +217,7 @@ body {
   color: white;
 }
 
-.m-input-window {
+.m-input-media-window {
   visibility: hidden;
   position: absolute;
   display: flex;
@@ -227,8 +228,22 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 3;
 }
+.m-input-media-window.active {
+  visibility: visible;
+}
 
-.m-input-window.active {
+.m-input-memo-window {
+  visibility: hidden;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 3;
+}
+.m-input-memo-window.active {
   visibility: visible;
 }
 
@@ -246,6 +261,7 @@ body {
   display: flex;
   justify-content: flex-end;
 }
+
 .m-delete-button {
   width: 20px;
   height: 20px;
@@ -273,7 +289,8 @@ body {
   margin-bottom: 20px;
 }
 
-.m-input input[id='input-title'],
+.m-input input[id='input-media-title'],
+input[id='input-memo-title'],
 input[id='url'] {
   width: 100%;
   height: 25px;
