--- a/project-motion/index.css
+++ b/project-motion/index.css
@@ -100,6 +100,9 @@ body {
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
+.m-contentbox.active {
+  border: 1px solid red;
+}
 
 .m-youtube {
   width: 50%;
